--- a/contactDetails.html
+++ b/contactDetails.html
@@ -7,12 +7,12 @@
   <body>
     <h3>My ContactDetails</h3>
     <ol>
-      <li><strong>phone No:</strong> 6297230771</li>
+      <li><strong>phone No:</strong> 62****71</li>
       <li><strong>gmail:</strong> anupkumarmahata4@gmail.com</li>
     </ol>
     <hr size = "4" noshade />
 
-<form  action="mailto:anuphrittik123@gmail.com" method="post" enctype="text/plain">
+<form  action="mailto:" method="post" enctype="text/plain">
   <label>Name:</label>
   <input type="text" name="Your Name" value="">
   <p>
