--- a/contactDetails.html
+++ b/contactDetails.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> <<h1><strong>contact Me</strong></h1></title>
+    <title> <h1><strong>contact Me</strong></h1></title>
   </head>
   <body>
     <h3>My Contact Details</h3>
@@ -23,12 +23,12 @@
   <p>
 
   </p>
-  <label>Date of Birth-></label>
+  <label>Date of Birth</label>
   <input type="datetime-local" name=" DOB" value="">
   <p>
 
   </p>
-  <label>Favourite Colour-></label>
+  <label>Favourite Colour></label>
   <input type="color" name="Favorite Color" value="">
   <p>
     <label> Attatched file</label>
