--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <hr size="3"  />
   <h2><strong> ContactDetails</strong></h2>
-  <h3><a href="ContactDetails.html"> contact me</a> </h3>
+  <h3><a href="contactDetails.html"> contact me</a> </h3>
   <p>
 
     <hr size="3"  />
